# hrs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  output.rs
tests/: cli.rs
tests/data/: hours.txt
