[package]
name = "hrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.35"
clap = { version = "4.5.0", features = ["derive"] }
colored = "3.0.0"
lazy_static = "1.5.0"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
